Fix search-comapany-container where text went out of div container on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -328,15 +328,15 @@ nav ul li:hover {
 
 .search-comapany-container {
     position: relative;
-    height: 250px;
+    /* height: 250px; */
 }
 
 .search-company-results {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+    /* width: 100%;
+    height: 100%; */
+    /* position: absolute; */
     /* left: 20px; */
-    top: 0;
+    /* top: 0; */
     
 }
 
@@ -357,15 +357,15 @@ nav ul li:hover {
 
 
 #add-review-button {
-    position: absolute;
     width: 80%;
-    bottom: 10px;
-    right: 10%;
     padding: 0;
+    margin-left: 10%;
+    margin-bottom: 20px;
 }
 
 .add-review-btn p {
     display: none;
+    text-decoration: underline;
 }
 
 .add-review-btn i {
@@ -569,6 +569,7 @@ nav ul li:hover {
         margin: 0;
     }
 
+
     .search-icon {
         display: none;
     }
@@ -579,23 +580,6 @@ nav ul li:hover {
     }
 
     .sign-in-icon {
-        display: none;
-    }
-
-    /* review-serch */
-
-    .search-comapany-container {
-        height: 300px;
-    }
-
-    .add-review-btn p {
-        display: block;
-        position: relative;
-        top: 208px;
-        left: 30px;
-    }
-
-    .add-review-btn span {
         display: none;
     }
 
@@ -619,7 +603,7 @@ nav ul li:hover {
         display: block;
         position: relative;
         top: 10px;
-        left: 20%;
+        left: 3%;
     }
 
     a.small-screen-logo i {
@@ -666,20 +650,6 @@ nav ul li:hover {
 
 }
 
-@media(max-width:360px) {
-
-    /* search-comapany
-
-
-    .search-comapany-container {
-        height: 340px;
-    }
-
-    .search-company-results span {
-        display: block;
-    } */
-
-}
 
 @media(min-width:602px) {
 
@@ -753,18 +723,30 @@ nav ul li:hover {
         height: 0;
     }
 
+    /* search-company-results */
+
+    .search-company-results p {
+        margin-top: 8px;
+        margin-bottom: 5px;
+    }
+
+    .search-comapany-container {
+        position: relative;
+        height: 160px;
+    }
+    
+    
+    #add-review-button {
+        position: relative;
+        bottom: 80px;
+        left: 55%;
+        width: 30%;
+    }
+
     /* hottest-section */
 
     .hottest-section-heding h4{
         margin: 0;
-    }
-
-   
-    /* review-serch */
-
-    .search-comapany-container {
-        position: relative;
-        height: 250px;
     }
 
 
@@ -795,18 +777,6 @@ nav ul li:hover {
     .serch-button {
         right: 3.1%;
         margin-top: 3px;
-    }
-
-    /* review-serch */
-
-    .search-comapany-container {
-        height: 200px;
-    }
-
-    #add-review-button {
-        top: 70px;
-        right: 50px;
-        width: 260px;
     }
 
 }
